# mid-project

./: README.md  pyproject.toml
mid_project/: email_slicer.py  helper_functions.py  password_generator.py  start.py
tests/: test_mid_project.py
