[tool.poetry]
name = "mid-project"
version = "0.1.0"
description = ""
authors = ["moradalkhatib <muradalkhateb@icloud.com>"]

[tool.poetry.dependencies]
python = "^3.9"
pytest = "^7.1.2"
termcolor = "^1.1.0"

[tool.poetry.dev-dependencies]
black = {version = "^22.6.0", allow-prereleases = true}

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
